--- a/index.html
+++ b/index.html
@@ -3,22 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Listology Frontend</title>
+    <title>Create List - Listology</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <div class="container mt-5">
-    <h2>Register</h2>
-    <form id="registrationForm">
-        <input type="text" id="username" placeholder="Username" class="form-control mb-2" required>
-        <input type="email" id="email" placeholder="Email" class="form-control mb-2" required>
-        <input type="password" id="password" placeholder="Password" class="form-control mb-2" required>
-        <button type="submit" class="btn btn-primary">Register</button>
+    <h2>Create a New List</h2>
+    <form id="createListForm">
+        <input type="text" id="title" placeholder="List Title" class="form-control mb-2" required>
+        <textarea id="description" placeholder="List Description" class="form-control mb-2" rows="3" required></textarea>
+        <button type="submit" class="btn btn-primary w-100">Create List</button>
     </form>
-    <p id="registerMessage"></p>
+    <p id="message" class="mt-3 text-center"></p>
 </div>
-<script src="app.js"></script>
+
+<script src="createList.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
