--- a/list-details.html
+++ b/list-details.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Profile - Listology</title>
+    <title>List Details - Listology</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <div class="container mt-5">
-    <h2 id="username" class="text-center"></h2>
-    <div id="listContainer" class="mt-3"></div>
+    <h2 id="listTitle" class="text-center"></h2>
+    <p id="listDescription" class="text-center mt-4"></p>
 </div>
 
-<script src="profile.js"></script>
+<script src="list-details.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
