--- a/profile.html
+++ b/profile.html
@@ -3,21 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome to Listology</title>
+  <title>User Profile - Listology</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div class="container text-center mt-5">
-  <h1>Welcome to Listology</h1>
-  <p>Create, manage, and explore lists!</p>
+<div class="container mt-5">
+  <h2 id="username" class="text-center"></h2>
+  <div id="listContainer" class="mt-3"></div>
 
-  <div class="mt-4">
-    <a href="login.html" class="btn btn-primary btn-lg m-2">Login</a>
-    <a href="register.html" class="btn btn-secondary btn-lg m-2">Register</a>
+  <div class="text-center mt-4">
+    <button id="createListBtn" class="btn btn-primary">Create New List</button>
+    <button id="logoutBtn" class="btn btn-secondary">Logout</button>
   </div>
 </div>
 
+<script src="profile.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
