--- a/music-lists.html
+++ b/music-lists.html
@@ -3,18 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recent Lists - Listology</title>
-    <link rel="stylesheet" href="./styles.css"> <!-- Relative path for CSS -->
+    <title>Music Lists - Listology</title>
+    <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 <body>
-<!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Listology</a>
         <div class="navbar-nav">
-            <span class="navbar-text me-3" id="greeting"></span>
-            <a class="nav-link" href="create-list.html">Create List</a>
             <a class="nav-link" href="recent.html">Recent Lists</a>
             <a class="nav-link" href="music-lists.html">Music</a>
             <a class="nav-link" href="television-movies-lists.html">Television & Movies</a>
@@ -25,13 +22,12 @@
     </div>
 </nav>
 
-
 <div class="container mt-5">
-    <h2 class="text-center">Recently Added Lists</h2>
-    <div id="recentListContainer" class="mt-4"></div>
+    <h2 class="text-center">Music Lists</h2>
+    <div id="listContainer" class="mt-4"></div>
 </div>
 
-<script src="./recent.js"></script> <!-- Corrected path for JS -->
+<script src="./category.js"></script> <!-- Use the same JS logic for all pages -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
