refactor: Rename recent lists page to "My Lists"
- Renamed recent.html to my-lists.html and recent.js to my-lists.js.
- Updated all references to ensure smooth navigation and functionality.
- Confirmed that login redirection and navbar links point to "My Lists".

--- a/recent.html
+++ b/recent.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recent Lists - Listology</title>
+    <title>My Lists - Listology</title>
     <link rel="stylesheet" href="./styles.css"> <!-- Relative path for CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
@@ -15,7 +15,7 @@
         <div class="navbar-nav">
             <span class="navbar-text me-3" id="greeting"></span>
             <a class="nav-link" href="create-list.html">Create List</a>
-            <a class="nav-link" href="recent.html">Recent Lists</a>
+            <a class="nav-link" href="my-lists.html">My Lists</a>
             <a class="nav-link" href="music-lists.html">Music</a>
             <a class="nav-link" href="television-movies-lists.html">Television & Movies</a>
             <a class="nav-link" href="books-lists.html">Books</a>
@@ -27,11 +27,11 @@
 
 
 <div class="container mt-5">
-    <h2 class="text-center">Recently Added Lists</h2>
+    <h2 class="text-center">My Lists</h2>
     <div id="recentListContainer" class="mt-4"></div>
 </div>
 
-<script src="./recent.js"></script> <!-- Corrected path for JS -->
+<script src="my-lists.js"></script> <!-- Corrected path for JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
