--- a/television-movies-lists.html
+++ b/television-movies-lists.html
@@ -12,7 +12,7 @@
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Listology</a>
         <div class="navbar-nav">
-            <a class="nav-link" href="recent.html">Recent Lists</a>
+            <a class="nav-link" href="my-lists.html">My Lists</a>
             <a class="nav-link" href="music-lists.html">Music</a>
             <a class="nav-link" href="tv-movies-lists.html">Television & Movies</a>
             <a class="nav-link" href="books-lists.html">Books</a>
