--- a/television-movies-lists.html
+++ b/television-movies-lists.html
@@ -8,19 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Listology</a>
-        <div class="navbar-nav">
-            <a class="nav-link" href="my-lists.html">My Lists</a>
-            <a class="nav-link" href="music-lists.html">Music</a>
-            <a class="nav-link" href="tv-movies-lists.html">Television & Movies</a>
-            <a class="nav-link" href="books-lists.html">Books</a>
-            <a class="nav-link" href="misc-lists.html">Misc</a>
-            <button class="btn btn-outline-danger" id="logoutBtn">Logout</button>
-        </div>
-    </div>
-</nav>
+<div id="navbarContainer"></div>
 
 <div class="container mt-5">
     <h2 class="text-center">Television & Movies Lists</h2>
