fix: Resolve missing file issue for navbar functionality
- Added the missing navbar.html file to ensure navbar loads correctly.
- Verified dynamic loading of navbar across all pages, including my-lists.html.
- Ensured consistent logout functionality and user greeting display.

--- a/navbar.html
+++ b/navbar.html
@@ -5,7 +5,7 @@
       <span class="navbar-text me-3" id="greeting"></span>
       <a class="nav-link" href="my-lists.html">My Lists</a>
       <a class="nav-link" href="music-lists.html">Music</a>
-      <a class="nav-link" href="tv-movies-lists.html">Television & Movies</a>
+      <a class="nav-link" href="television-movies-lists.html">Television & Movies</a>
       <a class="nav-link" href="books-lists.html">Books</a>
       <a class="nav-link" href="misc-lists.html">Misc</a>
       <a class="nav-link" href="create-list.html">Create List</a>
