--- a/music-lists.html
+++ b/music-lists.html
@@ -16,6 +16,7 @@
 </div>
 
 <script src="./category.js"></script> <!-- Use the same JS logic for all pages -->
+<script src="./navbar.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
