--- a/my-lists.html
+++ b/my-lists.html
@@ -18,6 +18,7 @@
 </div>
 
 <script src="my-lists.js"></script> <!-- Corrected path for JS -->
+<script src="./navbar.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
