--- a/books-lists.html
+++ b/books-lists.html
@@ -15,8 +15,8 @@
     <div id="listContainer" class="mt-4"></div>
 </div>
 
-<script src="./category.js"></script>
-<script src="./navbar.js"></script>
+<script src="static/category.js"></script>
+<script src="static/navbar.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
