--- a/list-details.html
+++ b/list-details.html
@@ -13,7 +13,7 @@
     <p id="listDescription" class="text-center mt-4"></p>
 </div>
 
-<script src="list-details.js"></script>
+<script src="static/list-details.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
