--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
   </div>
 </div>
 
-<script src="login.js"></script>
+<script src="static/login.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
