--- a/my-lists.html
+++ b/my-lists.html
@@ -17,8 +17,8 @@
     <div id="recentListContainer" class="mt-4"></div>
 </div>
 
-<script src="my-lists.js"></script> <!-- Corrected path for JS -->
-<script src="./navbar.js"></script>
+<script src="static/my-lists.js"></script> <!-- Corrected path for JS -->
+<script src="static/navbar.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
