--- a/register.html
+++ b/register.html
@@ -19,7 +19,7 @@
     <p id="registerMessage" class="mt-3 text-center"></p>
 </div>
 
-<script src="register.js"></script>
+<script src="static/register.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
