--- a/create-list.html
+++ b/create-list.html
@@ -2,9 +2,53 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>create-list</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Create List - Listology</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<div id="navbarContainer"></div>
 
+<div class="container mt-5">
+    <h2 class="text-center">Create a New List</h2>
+    <form id="createListForm" class="mt-4">
+        <div class="mb-3">
+            <input
+                    type="text"
+                    id="title"
+                    class="form-control"
+                    placeholder="List Title"
+                    required>
+        </div>
+
+        <div class="mb-3">
+                <textarea
+                        id="description"
+                        class="form-control"
+                        placeholder="List Description"
+                        rows="3"
+                        required></textarea>
+        </div>
+
+        <div class="mb-3">
+            <label for="category" class="form-label">Select Category</label>
+            <select id="category" class="form-select" required>
+                <option value="MUSIC">Music</option>
+                <option value="MOVIES">Movies & Television</option>
+                <option value="BOOKS">Books</option>
+                <option value="MISC">Miscellaneous</option>
+            </select>
+        </div>
+
+        <button type="submit" class="btn btn-primary w-100">Create List</button>
+    </form>
+
+    <p id="message" class="mt-3 text-center"></p>
+</div>
+
+<script src="static/navbar.js"></script>
+<script src="static/create-list.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
